# DepotDownloader

./: .gitignore  MODULE.bazel  paket.dependencies  paket.references
DepotDownloader/: AccountSettingsStore.cs  BUILD.bazel  ContentDownloader.cs  DownloadConfig.cs  HttpDiagnosticEventListener.cs  PlatformUtilities.cs  Program.cs  Steam3Session.cs  Util.cs
paket/: paket.main.bzl
